--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,5 +1,5 @@
 twitter: https://twitter.com/phguardian # Add your Twitter handle
-instagram: https://instagram.com/phguardian.brasil # Add your Instagram handle
+instagram: https://instagram.com/ph.guardian
 linkedin: https://linkedin.com/company/phguardian # Add your Instagram handle
 
 # Google Analytics
